--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vincenzo's Portfolio
-description: A showcase of my projects, certificates, and ...
+description: A showcase of my skills, projects, and certificates
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
